Add link submission form

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -126,8 +126,7 @@ a {
 
 #submit_btn {
     width: 100pt;
-    background: #519F50;
-    /* background: #A54242; unlocks the red theme */
+    background: #ff4646;
     color: white;
 }
 
