--- a/frontend/views/layouts/master.html
+++ b/frontend/views/layouts/master.html
@@ -16,6 +16,16 @@
                 {{template "now_playing" .}}
             </div>
 
+            <div id="submit_form">
+                <form role="form" id="link_form" method="post" action="">
+                    <div class="form-group">
+                        <label for="submit_box">{{template "button_label"}}</label>
+                        <input id="submit_box" type="text" class="form-control" name="submit_box">
+                    </div>
+                    {{template "button_type"}}
+                </form>
+            </div>
+
             {{template "song_queue" .}}
         </div>
     </body>
