Implement handle to remove songs

--- a/frontend/views/layouts/queue.html
+++ b/frontend/views/layouts/queue.html
@@ -20,7 +20,7 @@
                     </dt>
                     <dt class="queue_tool">
                         <li><a class="btn btn-default" href="https://www.youtube.com/watch?v={{$song.ServiceId}}" target="_blank"><span class="glyphicon glyphicon-export"></span></a></li>
-                        <li><button id="{{$song.ServiceId}}" type="button" class="btn btn-default queue_rm"><span class="glyphicon glyphicon-remove"></span></button></li>
+                        <li><button id="{{$song.SongId}}" type="button" class="btn btn-default queue_rm"><span class="glyphicon glyphicon-remove"></span></button></li>
                     </dt>
                 </dl>
             </td>
