Add skip button for currently playing song

--- a/frontend/views/layouts/now_playing.html
+++ b/frontend/views/layouts/now_playing.html
@@ -4,8 +4,13 @@
     <h2 id="np_song" class="extend">{{.now_playing}}</h2>
     {{if .has_song_playing}}
         <div id="banner_detail" class="collapse">
-            <p>Submitted by {{.user_name}}</p>
-            <p><a class="btn btn-default" href="https://www.youtube.com/watch?v={{.video_id}}" target="_blank"><span class="glyphicon glyphicon-export"></span></a></p>
+            <p>Submitted by {{call $.transform_user_name .song .session_user_id}}
+            <dt class="queue_tool">
+                <li><a class="btn btn-default" href="https://www.youtube.com/watch?v={{.song.ServiceId}}" target="_blank"><span class="glyphicon glyphicon-export"></span></a></li>
+                {{if call $.matches_session_user .song.UserId .session_user_id}}
+                <li><button id="{{.song.SongId}}" type="button" class="btn btn-default skip_now_playing"><span class="glyphicon glyphicon-step-forward"></span></button></li>
+                {{end}}
+            </dt>
         </div>
         <p id="banner_chevron"><span id="chevron" class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></p>
     {{end}}
