--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -4,7 +4,7 @@
 
 {{define "now_playing"}}
     <div class="jumbotron">
-        <img src="/static/img/ytbox_white.svg" alt="yt_box logo" class="img-responsive" id="logo">
+        <img src="/static/img/ytbox_sign_white.svg" alt="yt_box logo" class="img-responsive" id="logo">
     </div>
 {{end}}
 
