Remove collapsible now playing banner
This was done to reduce the jarring effect of the page resizing on each
refresh of the playlist. Instead, the frontend server now truncates
titles that are unreasonably long.

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -25,7 +25,6 @@ a {
     width: 100%;
     background: #ff4646;
     color: white;
-    cursor: pointer;
 }
 
 .glyphicon-plus {
@@ -84,7 +83,7 @@ a {
     display: inline;
 }
 
-#np_placeholder {
+#now_playing_title {
     font-size: 32px;
 }
 
