--- a/frontend/views/login.html
+++ b/frontend/views/login.html
@@ -15,7 +15,7 @@
             <input id="room_name_box" type="text" class="form-control" name="room_name_box" value="{{.room_name}}">
             <br>
             <label for="user_name_box">Set your display name:</label>
-            <input id="user_name_box" type="text" class="form-control" name="user_name_box">
+            <input id="user_name_box" type="text" class="form-control" name="user_name_box" value="{{.user_name}}">
         </div>
 
         <button id="login_btn" class="btn btn-default btn-lg">Enter</button>
