--- a/frontend/views/index.html
+++ b/frontend/views/index.html
@@ -14,7 +14,7 @@
             <input id="submit_box" type="text" class="form-control" name="submit_box">
         </div>
 
-        <button id="submit_btn" class="btn-default btn-lg">Submit Link</button>
+        <button id="submit_btn" class="btn-default btn-lg pull-right">Submit Link</button>
     </form>
 {{end}}
 
